--- a/templates/index.html
+++ b/templates/index.html
@@ -608,7 +608,8 @@ google.maps.event.addListener(marker, 'click', () => {
         <button title="Add New" class="button" >+</button>
     </a>
     /* From Uiverse.io by xopc333 */ 
-<button class="back-btn">
+    <a href="/adopt">
+    <button class="back-btn">
   <div class="button-box">
     <span class="button-elem">
       <svg viewBox="0 0 46 40" xmlns="http://www.w3.org/2000/svg">
@@ -626,7 +627,7 @@ google.maps.event.addListener(marker, 'click', () => {
     </span>
   </div>
 </button>
-
+</a>
     
 </body>
 </html>
