--- a/templates/adopt.html
+++ b/templates/adopt.html
@@ -120,8 +120,8 @@
             <div class="view-8"><div class="text-wrapper-15">寵物地圖</div></div>
             <div class="view-9"><div class="text-wrapper-15">聊天室</div></div>
           </div>
-          <a href="myself.html"><img class="user-jpg" src="../static/img/user-jpg-1.svg" /></a>
-          <div class="view-10"><div class="text-wrapper-15">個人資訊</div></div>
+          <a href="/myself"><img class="user-jpg" src="../static/img/user-jpg-1.svg" />
+          <div class="view-10"><div class="text-wrapper-15">個人資訊</div></div></a>
         </div>
       </div>
     </div>
