--- a/templates/myself.html
+++ b/templates/myself.html
@@ -171,7 +171,7 @@
               <img class="vector-5" src="../static/img/vector-10.svg" />
             </div>
           </div>
-          <a href="nodify.html"><img class="vector-6" src="../static/img/vector-12.svg" /></a>
+          <a href="/nodify"><img class="vector-6" src="../static/img/vector-12.svg" /></a>
         </div>
         <div class="nav">
           <div class="overlap-15">
