--- a/static/css/nodify.css
+++ b/static/css/nodify.css
@@ -6,6 +6,14 @@
     width: 100%;
   }
   
+
+
+    .nodify .pic{
+      position: absolute;
+      top: 150px;
+      left: 100px;
+      }
+
   .nodify .div {
     background-color: #fff7f0;
     overflow: hidden;
@@ -58,7 +66,7 @@
     height: 78px;
     top: 442px;
     left: 492px;
-    background-color: #ffffff80;
+    background-color: #ffffff;
     border-radius: 20px;
   }
 
@@ -68,6 +76,7 @@
     height: 387px;
     top: 300px;
     left: 58px;
+
   }
   
   .nodify .text-wrapper-2 {
@@ -207,23 +216,18 @@
     width: 770px;
     height: 220px;
     top: 150px;
-    left: 470px;
+    left: 484px;
+    background-color: #ffffff;
     font-size: 25px;
     color:#444444;
-    line-height:2
+    line-height:1.3
   }
 
-.nodify .pic{
-  position: absolute;
-  top: 150px;
-  left: 100px;
-  }
-  
 .nodify.overlap-4{
-    position: relative;
+    position: absolute;
     width: 1326px;
     height: 387px;
-    background-color: #fbeece;
+    background-color: #fefbd1f7;
   }
 
   .nodify .overlap-group-3 {
@@ -299,7 +303,7 @@
     height: 350px;
     top: 349px;
     left: 71px;
-    background-color: #d9d9d9;
+    background-color: #fefbd1f7;
   }
   
   .nodify .overlap-2 {
@@ -440,7 +444,7 @@
   .nodify .text-wrapper-7 {
     position: absolute;
     top: 80px;
-    left: 565px;
+    left: 775px;
     font-family: "Inter", Helvetica;
     font-weight: 700;
     color: #877468;
@@ -481,4 +485,10 @@
     height: 27px;
     top: 131px;
     left: 1301px;
+  }
+
+  .nodify .img2{
+    position: absolute;
+    left: 100px;
+    top: 140px;
   }
