--- a/static/css/template.css
+++ b/static/css/template.css
@@ -17,25 +17,33 @@
 .template .overlap {
   position: absolute;
   width: 2290px;
-  height: 826px;
-  top: 890px;
-  left: -370px;
+  height: 681px;
+  top: 0px;
+  left: 0;
+
+}
+
+.template .pic {
+  position: absolute;
+  top: 430px;
+  left: 200px;
+
 }
 
 .template .shape {
   position: absolute;
   width: 2290px;
   height: 681px;
-  top: 145px;
-  left: 0;
+  top: 1000px;
+  left: -400px;
 }
 
 .template .footer {
   position: absolute;
   width: 2290px;
   height: 681px;
-  top: 58px;
-  left: 0;
+  top: 950px;
+  left: -350px;
   background-color: transparent;
 }
 
@@ -280,7 +288,7 @@
   position: absolute;
   width: 73px;
   height: 73px;
-  top: -8px;
+  top: -370px;
   left: -15px;
   object-fit: cover;
 }
@@ -289,7 +297,7 @@
   position: absolute;
   width: 389px;
   height: 92px;
-  top: 254px;
+  top: 800px;
   left: 533px;
 }
 
@@ -301,40 +309,41 @@
 
 .template .view-4 {
   position: absolute;
-  width: 368px;
-  height: 92px;
-  top: 0;
-  left: 0;
+  width: 220px;
+  height: 66px;
+  top: -367px;
+  left: 15px;
   background-color: #fee3c8;
-  border-radius: 6px;
+  border-radius: 30px;
 }
 
 .template .text-wrapper-6 {
-  width: 290px;
-  top: 22px;
-  left: 97px;
-  font-size: 40px;
-  letter-spacing: 6.00px;
-  line-height: normal;
-  position: absolute;
-  font-family: "Inter", Helvetica;
-  font-weight: 700;
-  color: #595959e0;
-}
+    top: -355px;
+    left: 88px;
+    font-size: 35px;
+    text-align: center;
+    letter-spacing: 3.15px;
+    line-height: 45px;
+    white-space: nowrap;
+    position: absolute;
+    font-family: "Inter", Helvetica;
+    font-weight: 700;
+    color: #595959e0;
+  }
 
 .template .group {
   position: absolute;
   width: 1332px;
   height: 387px;
-  top: 424px;
+  top: 250px;
   left: 58px;
+  background-color: #fefbd1f7;
 }
 
 .template .overlap-4 {
   position: relative;
   width: 1326px;
   height: 387px;
-  background-color: #fbeece;
 }
 
 .template .text-wrapper-7 {
@@ -344,7 +353,7 @@
   font-family: "Inter", Helvetica;
   font-weight: 700;
   color: #877468;
-  font-size: 40px;
+  font-size: 36px;
   text-align: center;
   letter-spacing: 3.60px;
   line-height: 45px;
@@ -358,6 +367,8 @@
   top: 111px;
   left: 484px;
   background-color: #ffffff;
+  font-size: 25px;
+  color:#444444;
 }
 
 .template .text-wrapper-8 {
@@ -397,10 +408,23 @@
   white-space: nowrap;
 }
 
-.template .nav {
-  position: fixed;
-  width: 1444px;
-  height: 185px;
+.template .text-wrapper-10 {
+  position: absolute;
+  width: 87px;
+  top: -1px;
+  left: 0;
+  font-family: "Inter", Helvetica;
+  font-weight: 700;
+  color: #4c3c3ccc;
+  font-size: 20px;
+  letter-spacing: 1.60px;
+  line-height: normal;
+}
+
+.nav {
+  position: absolute;
+  width: 1460px;
+  height: 173px;
   top: -7px;
   left: -2px;
   background-color: #fff7f0;
@@ -409,6 +433,7 @@
   backdrop-filter: blur(30px) brightness(100%);
   -webkit-backdrop-filter: blur(30px) brightness(100%);
 }
+
 
 .template .overlap-6 {
   position: absolute;
@@ -511,6 +536,20 @@
   height: 107px;
 }
 
+.template .text-wrapper-5 {
+  position: absolute;
+  width: 1033px;
+  top: 220px;
+  left: 189px;
+  font-family: "Inter-Bold", Helvetica;
+  font-weight: 700;
+  color: #595959;
+  font-size: 40px;
+  text-align: center;
+  letter-spacing: 6.00px;
+  line-height: normal;
+}
+
 .template .AR-VR-2 {
   position: absolute;
   width: 85px;
@@ -519,18 +558,6 @@
   left: 1096px;
 }
 
-.template .text-wrapper-10 {
-  position: absolute;
-  width: 85px;
-  top: -1px;
-  left: 0;
-  font-family: "Inter", Helvetica;
-  font-weight: 700;
-  color: #4c3c3ccc;
-  font-size: 20px;
-  letter-spacing: 1.60px;
-  line-height: normal;
-}
 
 .template .view-5 {
   position: absolute;
@@ -583,4 +610,10 @@
   height: 27px;
   top: 131px;
   left: 1301px;
+}
+
+.template .img2{
+  position: absolute;
+  left: 100px;
+  top: 110px;
 }
