--- a/templates/index.html
+++ b/templates/index.html
@@ -615,7 +615,7 @@ google.maps.event.addListener(marker, 'click', () => {
     <a href="/ad-post">
         <button title="Add New" class="button" >+</button>
     </a>
-<button class="back-btn">
+<a href="/adopt"><button class="back-btn">
   <div class="button-box">
     <span class="button-elem">
       <svg viewBox="0 0 46 40" xmlns="http://www.w3.org/2000/svg">
@@ -632,7 +632,7 @@ google.maps.event.addListener(marker, 'click', () => {
       </svg>
     </span>
   </div>
-</button>
+</button></a>
 
     
 </body>
