--- a/templates/nodify.html
+++ b/templates/nodify.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <title>文案發布</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../static/css/nodify.css" rel="stylesheet">
     <link href="../static/css/nav.css" rel="stylesheet">
@@ -47,7 +48,6 @@
             <div class="overlap-3">
               <img class="line" src="static/img/line.svg" />
               <div class="AR-VR-jpg"><img class="img" src="static/img/ar-vr-1.png" /></div>
-              <img class="map-jpg" src="static/img/map-jpg.svg" />
               <div class="donate-jpg"><img class="donate" src="static/img/donate.png" /></div>
               <div class="chat-jpg"><img class="chat" src="static/img/chat.png" /></div>
               <img class="vector-2" src="static/img/vector-1.svg" />
@@ -76,7 +76,8 @@
 
             <div class="AR-VR-2"><div class="text-wrapper-6">AR/VR</div></div>
             <div class="view-4"><div class="text-wrapper-6">捐款</div></div>
-            <div class="view-5"><div class="text-wrapper-6">寵物地圖</div></div>
+            <a href="/map"><img class="map-jpg" src="static/img/map-jpg.svg" />
+              <div class="view-5"><div class="text-wrapper-6">寵物地圖</div></div></a>
             <div class="view-6"><div class="text-wrapper-6">聊天室</div></div>
           </div>
           <img class="user-jpg" src="static/img/user-jpg.svg" />
