--- a/templates/template.html
+++ b/templates/template.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh">
   <head>
+    <title>文案編輯及確認</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../static/css/globals.css" />
     <link rel="stylesheet" href="../static/css/styleguide.css" />
