--- a/templates/ad-post.html
+++ b/templates/ad-post.html
@@ -15,12 +15,12 @@
     <div class="ad-post">
       <div class="div">
         <div class="overlap">
-          <img class="shape" src="static/img/shape-2.png" />
+          <img class="shape" src="../static/img/shape-2.png" />
           <footer class="footer">
             <p class="text-wrapper">Copyright © 破鏡寵緣 讓愛延續 2024. All rights reserved.</p>
             <div class="overlap-group">
               <div class="text-wrapper-2">rekindlepetlove@gmail.com</div>
-              <img class="mail" src="static/img/mail-1.svg" />
+              <img class="mail" src="../static/img/mail-1.svg" />
             </div>
       <header>
             <div class="AR-VR"><div class="text-wrapper-3">AR/VR</div></div>
@@ -39,9 +39,9 @@
                 </p>
                 <p class="text-i"><span class="span">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;讓愛延續</span></p>
               </div>
-              <img class="logo" src="static/img/logo-1.png" />
+              <img class="logo" src="../static/img/logo-1.png" />
             </div>
-            <img class="vector" src="static/img/vector-6.svg" />
+            <img class="vector" src="../static/img/vector-6.svg" />
           </footer>
         </div>
       </header>
@@ -51,8 +51,8 @@
           <div class="overlap-wrapper">
             <div class="overlap-4"><div class="text-wrapper-5">AI文案生成</div></div>
           </div>
-          <img class="pet-supplies" src="static/img/pet-supplies-3.png" />
-          <img class="footprint" src="static/img/footprint-3.png" />
+          <img class="pet-supplies" src="../static/img/pet-supplies-3.png" />
+          <img class="footprint" src="../static/img/footprint-3.png" />
         
           <div class="inputs-name">
             <div class="text-field">
@@ -106,7 +106,7 @@
               <div class="overlap-group-2">
                 <div class="view-4"></div>
                 <button type="submit"><div class="text-wrapper-12">下一頁</div>
-                  <img class="dog" src="static/img/dog-1-1.png"/>
+                  <img class="dog" src="../static/img/dog-1-1.png"/>
                 </button>
 
 
@@ -125,26 +125,26 @@
         <div class="nav">
           <div class="overlap-6">
             <div class="overlap-7">
-              <img class="line" src="static/img/line-1.svg" />
-              <div class="AR-VR-jpg"><img class="img" src="static/img/ar-vr-1.png" /></div>
-              <img class="map-jpg" src="static/img/map-jpg-1.svg" />
-              <div class="donate-jpg"><img class="donate" src="static/img/donate-1.png" /></div>
-              <div class="chat-jpg"><img class="chat" src="static/img/chat-1.png" /></div>
-              <img class="vector-2" src="static/img/vector-1-1.svg" />
+              <img class="line" src="../static/img/line-1.svg" />
+              <div class="AR-VR-jpg"><img class="img" src="../static/img/ar-vr-1.png" /></div>
+              <img class="map-jpg" src="../static/img/map-jpg-1.svg" />
+              <div class="donate-jpg"><img class="donate" src="../static/img/donate-1.png" /></div>
+              <div class="chat-jpg"><img class="chat" src="../static/img/chat-1.png" /></div>
+              <img class="vector-2" src="../static/img/vector-1-1.svg" />
               <div class="flexcontainer-i">
                 <p class="text-i">
                   <span class="span">破鏡寵緣<br /></span>
                 </p>
                 <p class="text-i"><span class="span">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;讓愛延續</span></p>
               </div>
-              <img class="logo" src="static/img/logo-1.png" />
+              <img class="logo" src="../static/img/logo-1.png" />
             </div>
             <div class="AR-VR-2"><div class="text-wrapper-15">AR/VR</div></div>
             <div class="view-5"><div class="text-wrapper-15">捐款</div></div>
             <div class="view-6"><div class="text-wrapper-15">寵物地圖</div></div>
             <div class="view-7"><div class="text-wrapper-15">聊天室</div></div>
           </div>
-          <img class="user-jpg" src="static/img/user-jpg-1.svg" />
+          <img class="user-jpg" src="../static/img/user-jpg-1.svg" />
           <div class="view-8"><div class="text-wrapper-15">個人資訊</div></div>
         </div>
       </div>
